# dt

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/dt/: __init__.py  __main__.py  cli.py
src/dt/aliases/: __init__.py  store.py
src/dt/cache/: __init__.py  store.py
src/dt/formats/: __init__.py  csv_handler.py  detect.py  excel_handler.py  json_handler.py  registry.py  xml_handler.py  yaml_handler.py
src/dt/llm/: __init__.py  base.py  claude.py  ollama.py  prompt.py
src/dt/transform/: __init__.py  engine.py  sandbox.py
tests/: conftest.py
tests/fixtures/: sample.csv  sample.json  sample.jsonl  sample.tsv  sample.xlsx  sample.xml  sample.yaml
tests/integration/: test_cli.py  test_format_roundtrip.py  test_piping.py
tests/unit/aliases/: test_store.py
tests/unit/cache/: test_store.py
tests/unit/formats/: test_csv_handler.py  test_detect.py  test_excel_handler.py  test_json_handler.py  test_xml_handler.py  test_yaml_handler.py
tests/unit/llm/: test_claude.py  test_ollama.py  test_prompt.py
tests/unit/transform/: test_engine.py  test_sandbox.py
