[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dt-cli"
version = "0.1.0"
description = "Natural language data transformer CLI"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "polars>=1.0.0",
    "pyyaml>=6.0.1",
    "lxml>=5.0.0",
    "openpyxl>=3.1.0",
    "fastexcel>=0.11.0",
    "anthropic>=0.39.0",
    "ollama>=0.4.0",
    "diskcache>=5.6.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-mock>=3.14.0",
    "syrupy>=4.6.0",
]

[project.scripts]
dt = "dt.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["dt"]

[tool.coverage.report]
fail_under = 90
show_missing = true
